--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
+node_modules/
+dist/
+tmp/
+.cache/
 dist-ssr
 *.local
 
@@ -22,3 +24,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Keep docs tracked for GitHub Pages
+# (do NOT ignore docs/)
+
+# Environment files
+.env*
